<resources>
    <string name="app_name">AlexiGuitarTuner</string>
    <string name="title_tuner">Tuner</string>
    <string name="title_metronome">Metronome</string>
    <string name="title_chords">Chord Table</string>
    <string name="title_sgc">String Gauge Calculator</string>
    <string name="title_settings">Settings</string>
    <string name="remove_note">Remove note</string>
    <string name="add_note">Add note</string>
    <string name="image_of_current_rhythm">image_of_current_rhythm</string>
    <string name="image_of_all_rhythm">image_of_all_rhythm</string>
    <string name="bpm">BPM</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="info">This String Gauge Calculator estimates the string gauge (suggesting D\'Addario plain steel strings) based on \n - the frequency of the pitch (in hertz),\n - the scale length (in inch),\n - and the tension (in pounds).\n\nThe app calculates the string gauge with the unit weight of the string (unit weight = (tension x 386.4) / (2 x length x frequency)^2) and the following formula:\n2.1242 * unit weight ^ 0.5\n\nSimply enter these parameters, click the refresh button, and the app will provide you with an estimated string gauge, making it easier to select the right strings for your guitar.</string>
    <string name="accept">GOT IT</string>
    <string name="select_instrument">Select Instrument</string>
    <string name="select_tuning">Select tuning</string>
    <string name="select_chord">Select chord</string>
    <string name="position">Position:</string>
    <string name="show_previous_position">Show previous position</string>
    <string name="show_next_position">Show next position</string>
    <string name="half_note_display">Half note display:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="sharp">Sharp (#)</string>
    <string name="flat_b">Flat (b)</string>
    <string name="string_gauge">String gauge:</string>
    <string name="notation_system">Notation system:</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="select_tuning_settings">Select tuning</string>
    <string name="create_custom_tuning">Create custom tuning</string>
    <string name="select_default_tuning_for_the_tuner">Select default tuning for the tuner:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name_of_the_new_tuning"><![CDATA[<Name of the new tuning>]]></string>
    <string name="hertz"> Hertz:</string>
    <string name="delete_all_custom_tunings">Delete all custom tunings</string>
    <string name="alexi_guitar_tuner">Alexi Guitar Tuner</string>
    <string name="created_by_istvan_hegyi">Created by: Istvan Hegyi</string>
    <string name="selected_tuning">Selected tuning:</string>
    <string name="hint">hint</string>
    <string name="_1">1</string>
</resources>