<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@+id/navigation_tuner">

    <fragment
        android:id="@+id/navigation_tuner"
        android:name="com.ihegyi.alexiguitartuner.feat_tuner.presentation.ui.TunerFragment"
        android:label="@string/title_tuner"
        tools:layout="@layout/fragment_tuner" />

    <fragment
        android:id="@+id/navigation_metronome"
        android:name="com.ihegyi.alexiguitartuner.feat_metronome.presentation.ui.MetronomeFragment"
        android:label="@string/title_metronome"
        tools:layout="@layout/fragment_metronome" />

    <fragment
        android:id="@+id/navigation_chords"
        android:name="com.ihegyi.alexiguitartuner.feat_chordtable.presentation.ui.ChordTableFragment"
        android:label="@string/title_chords"
        tools:layout="@layout/fragment_chord_table" />

    <fragment
        android:id="@+id/navigation_sgc"
        android:name="com.ihegyi.alexiguitartuner.feat_sgc.presentation.ui.SGCFragment"
        android:label="@string/title_sgc"
        tools:layout="@layout/fragment_s_g_c" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ihegyi.alexiguitartuner.commons.presentation.ui.UserSettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_user_settings" />

</navigation>