<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ihegyi.alexiguitartuner.feat_metronome.presentation.ui.MetronomeFragment"
    android:theme="@style/Theme.AlexiGuitarTuner.LayoutStyle">

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/sbBPM"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:max="200"
        android:min="40"
        android:thumbTint="@color/colorPrimary"
        android:progressTint="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBPMData" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStart"
        style="@style/Widget.Theme.AlexiGuitarTuner.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toTopOf="@+id/ivNoteBackground"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbBPM"
        app:tint="@color/colorOnPrimary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStop"
        style="@style/Widget.Theme.AlexiGuitarTuner.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_baseline_stop_24"
        app:layout_constraintBottom_toTopOf="@+id/ivNoteBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/sbBPM"
        app:tint="@color/colorOnPrimary" />

    <TextView
        android:id="@+id/tvBPMData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <TextView
        android:id="@+id/tvBPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/bpm"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/ivNoteBackground"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_of_all_rhythm"
        android:src="@drawable/ic_notes_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBPMData" />

    <ImageView
        android:id="@+id/ivNoteForeground"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/image_of_current_rhythm"
        android:src="@drawable/ic_quarter_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBPMData"
        app:tint="@color/colorOnPrimary" />

    <com.ihegyi.alexiguitartuner.feat_metronome.presentation.ui.RhythmView
        android:id="@+id/rhythmView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlus"
        style="@style/Widget.Theme.AlexiGuitarTuner.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_note"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="@+id/rhythmView"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/rhythmView"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMinus"
        style="@style/Widget.Theme.AlexiGuitarTuner.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/remove_note"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_remove_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/rhythmView"
        app:layout_constraintTop_toBottomOf="@+id/rhythmView"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>